# deep-interaction-tensor

./: README.md
data/: New992_Approx_descriptor_8.pcd  New992_Approx_descriptor_8_extra.pcd  New992_Approx_descriptor_8_members.pcd  New992_Approx_descriptor_8_points.pcd  New992_Approx_descriptor_8_vdata.pcd  New992_Approx_descriptor_8_vectors.pcd  parameters.txt  tmp992.csv
figures/: scannet_scenes.txt
src/: CMakeLists.txt  Tensor.cpp  Tensor.h  agglo_clean.m  main.cpp
